28 Sep 2003
 * added find_file_dir() in common.
 * rewritten find_file() to use find_file_dir().
 * added get_file_dir_path() and single_append() in functool.
 * disabled temporay override in DEFINE command.
 * fixed pmk_check_variable().
 * added VARIABLE in CHECK_CONFIG to store config tool path.
 * added CFLAGS in CHECK_HEADER to store in an alternative variable.
 * put Makefile back in root mode.

# snapshot 0.6.5

27 Sep 2003 mipsator
 * improved process_string() to allow escaping of $ character.
 * improved parse_quoted() to not eat escape characters.
 * added mkf_sed() and renamed do_sed() to templ_sed() in pmkcfg.
 * improved Makefile to switch easily between root and user mode.
 * created Makefile.pmk
 * updated pmkcfg.sh and pmkfile to sync with Makefile changes.
 * synced pmkscan, pmksetup and premake.h with usermode changes.
 * updated README and INSTALL.
 * fixed pmk_switches() and missing escape in pmkfile.
 * bunch of fixes and cosmetics changes before next snapshot.
 * fixed vicious bug in pmksetup that results in segfault on tru64.

26 Sep 2003 mipsator
 * added support to negate labels in conditions like DEPEND or IF.
 * updated pmkfile.5 to sync with latest changes.
 * fixed pmk_switches() for use of bool type.

25 Sep 2003 mipsator
 * added prs_get_line(), parse_node(), parse_command() and parse_line() to
	allow use of real nodes (aka commands into another command).
 * rewritten parse_pmkfile() to use new functions.
 * updated test/parser_test.c to sync with latest changes.
 * added pmk_ifcond() into func.c to manage new 'IF' keyword.
 * updated pmkfile sample to use 'IF' keyword.

22 Sep 2003 mipsator
 * added small support for DEFS.

# snapshot 0.6.4

20 Sep 2003 mipsator
 * added ac_set_variables() in autoconf.
 * added autoconf compatibility stuff for byte order.

19 Sep 2003 mipsator
 * made syntax more simple, now all the checks use NAME for the main
	target (example in CHECK_TYPE, NAME contain the type to check).