@@ -1,4 +1,7 @@
-28 Sep 2003
+30 Sep 2003 mipsator
+ * changed USERMODE by PMK_USERMODE to avoid conflicts. 
+
+28 Sep 2003 mipsator
  * added find_file_dir() in common.
  * rewritten find_file() to use find_file_dir().
  * added get_file_dir_path() and single_append() in functool.
